--- a/inventory_management/inventory/templates/product_form.html
+++ b/inventory_management/inventory/templates/product_form.html
@@ -1,12 +1,15 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>Inventory Management System - {% if form.instance.pk %} Update {% else %} Create {% endif %} Product</title>
-</head>
-<body>
+{% extends 'base.html' %}
+
+{% block content %}
   <h1>{% if form.instance.pk %} Update {% else %} Create {% endif %} Product</h1>
+  {% if form.errors %}
+    <ul class="errors">  {% for error in form.errors %}
+        <li>{{ error }}</li>
+      {% endfor %}
+    </ul>
+  {% endif %}
   <form method="post">
-    {% csrf_token %}  {{ form.as_p }}  <button type="submit">{% if form.instance.pk %} Update {% else %} Create {% endif %}</button>
+    {% csrf_token %}
+    {{ form.as_p }}  <button type="submit">{% if form.instance.pk %} Update {% else %} Create {% endif %}</button>
   </form>
-</body>
-</html>
+{% endblock %}
