--- a/inventory_management/inventory/templates/base.html
+++ b/inventory_management/inventory/templates/base.html
@@ -4,8 +4,8 @@
   <title>Inventory Management System</title>
   {% load static %}  <link rel="stylesheet" href="{% static 'css/style.css' %}">  </head>
 <body>
-  <header>
-    <h1>Inventory Management System</h1>
+  <header class="nav-container">
+    <h1 class="nav-title">Inventory Management System</h1>
   </header>
   <main>
     {% block content %} {% endblock %}  </main>
