--- a/inventory_management/inventory/templates/base.html
+++ b/inventory_management/inventory/templates/base.html
@@ -2,7 +2,8 @@
 <html>
 <head>
   <title>Inventory Management System</title>
-  {% load static %}  <link rel="stylesheet" href="{% static 'css/style.css' %}">  </head>
+  <link rel="stylesheet" href="https://bootswatch.com/3/slate/bootstrap.min.css">  
+</head>
 <body>
   <header class="nav-container">
     <h1 class="nav-title">Inventory Management System</h1>
